WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
243398
[GStreamer][MediaStream] Prevent infinite wait in case of disposal of the src element without pushing buffers
https://bugs.webkit.org/show_bug.cgi?id=243398
Summary
[GStreamer][MediaStream] Prevent infinite wait in case of disposal of the src...
Philippe Normand
Reported
2022-08-01 04:30:12 PDT
ssia
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2022-08-01 04:31:29 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/2897
EWS
Comment 2
2022-08-03 02:01:40 PDT
Committed
253066@main
(05871f6631c8): <
https://commits.webkit.org/253066@main
> Reviewed commits have been landed. Closing PR #2897 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2022-08-03 02:02:17 PDT
<
rdar://problem/98037216
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug